--- a/css/1-col-portfolio.css
+++ b/css/1-col-portfolio.css
@@ -4,9 +4,9 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-1-col-portfolio/blob/master/LICENSE)
  */
 
-body {
-  padding-top: 54px;
-}
+/*body {*/
+  /*padding-top: 54px;*/
+/*}*/
 
 @media (min-width: 992px) {
   body {
